0.1_demo/L0/app/src/main/java/com/example/fileSystem/error/error.java
package com.example.fileSystem.error;

public class error extends RuntimeException {
    public error(String message) {
        super(message);
    }
}
